--- a/index.html
+++ b/index.html
@@ -864,6 +864,9 @@
                         <a href="https://facebook.com/chukwuka.udeh.94" target="_blank" class="footer__social">
                             <i class="uil uil-facebook-f"></i>
                         </a>
+                        <a href="https://wa.me/message/WHM66MNNWWXEI1" target="_blank" class="footer__social">
+                            <i class="uil uil-whatsapp-alt"></i>
+                        </a>
                     </div>
                 </div>
 
